--- a/mm-app/assets/css/app-main.css
+++ b/mm-app/assets/css/app-main.css
@@ -1,4 +1,4 @@
-/*! media-manager 2016-06-01 */
+/*! media-manager 2016-06-02 */
 /* Open Sans @font-face kit */
 /* BEGIN Light */
 @font-face {
@@ -811,6 +811,17 @@ body.on-drop-hover #mm-filedrop-cover {
 .mm-wrapper #mm-addfiles-cover .dropzone-inner p .btn-browse {
   cursor: pointer;
   border-bottom: 1px solid #6779a0;
+  font-weight: 700;
+  color: inherit;
+  text-decoration: none;
+}
+.mm-wrapper #mm-addfiles-cover .dropzone-inner .input-group .form-control .btn-browse:hover,
+.mm-wrapper #mm-addfiles-cover .dropzone-inner p .btn-browse:hover,
+.mm-wrapper #mm-addfiles-cover .dropzone-inner .input-group .form-control .btn-browse:active,
+.mm-wrapper #mm-addfiles-cover .dropzone-inner p .btn-browse:active,
+.mm-wrapper #mm-addfiles-cover .dropzone-inner .input-group .form-control .btn-browse:focus,
+.mm-wrapper #mm-addfiles-cover .dropzone-inner p .btn-browse:focus {
+  text-decoration: none;
 }
 .mm-wrapper #mm-addfiles-cover .dropzone-inner .input-group {
   width: 100%;
