--- a/mm-app/assets/css/less/app-main.less
+++ b/mm-app/assets/css/less/app-main.less
@@ -859,6 +859,15 @@ body {
 				.btn-browse {
 					cursor: pointer;
 					border-bottom: 1px solid #6779a0;
+					font-weight: 700;
+					color: inherit;
+					text-decoration: none;
+
+					&:hover,
+					&:active,
+					&:focus {
+						text-decoration: none;
+					}
 				}
 			}
 
