--- a/mm-app/assets/css/less/app-main.less
+++ b/mm-app/assets/css/less/app-main.less
@@ -146,6 +146,7 @@ body {
 					font-weight: 500;
 					display: block;
 					position: relative;
+					cursor: pointer;
 					transition: 
 						color 200ms ease, 
 						box-shadow 200ms ease,
