--- a/mm-app/assets/css/app-main.css
+++ b/mm-app/assets/css/app-main.css
@@ -1,4 +1,4 @@
-/*! media-manager 2016-06-06 */
+/*! media-manager 2016-10-12 */
 /* Open Sans @font-face kit */
 /* BEGIN Light */
 @font-face {
@@ -493,10 +493,20 @@ body.on-drop-hover #mm-filedrop-cover {
   background-image: linear-gradient(45deg, #efefef 25%, transparent 25%, transparent 75%, #efefef 75%, #efefef), linear-gradient(45deg, #efefef 25%, transparent 25%, transparent 75%, #efefef 75%, #efefef);
   background-position: 0 0,10px 10px;
   background-size: 21px 21px;
-}
-.mm-wrapper .media-listing .media-container .media-item .image img {
-  width: 100%;
-  height: auto;
+  /*&.landscape {
+						img {
+							max-height: 100%;
+							height: 100%;
+						}
+					}
+
+
+					&.portrait {
+						img {
+							max-width: 100%;
+							width: 100%;
+						}
+					}*/
 }
 .mm-wrapper .media-listing .media-container .media-item .overlay {
   background: rgba(37, 44, 58, 0.88);
