--- a/mm-app/assets/css/less/app-main.less
+++ b/mm-app/assets/css/less/app-main.less
@@ -508,10 +508,27 @@ body {
 
 					.transparent-image-bg;
 
-					img { 
-						width: 100%; 
-						height: auto; 
+					//img { 
+					//	width: 100%; 
+					//	height: auto; 
+					//}
+
+					
+					/*&.landscape {
+						img {
+							max-height: 100%;
+							height: 100%;
+						}
 					}
+
+
+					&.portrait {
+						img {
+							max-width: 100%;
+							width: 100%;
+						}
+					}*/
+
 				}
 
 				.overlay{
